[package]
name = "sql-tui"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros"] }
tui = { version = "*", default-features = false, features = ["crossterm"] }
tui-textarea = { version = "*", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.25", features = [ "serde" ] }
sqlx = { version = "0.6", features = ["all-types", "mysql", "postgres", "runtime-tokio-native-tls" ] } 
anyhow = "1"
chrono = { version = "0.4", features = [ "serde" ] }
uuid = { version = "0.8", features = ["serde", "v4"] }
strum = { version = "0.24", features = ["derive"] }
dirs-next = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
itertools = { version = "0.10.5" }
regex = "1.7"
time = "0.3"
