[package]
name = "sql-tui"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros"] }
tui = { package = "ratatui", version = "0.20.1" }
tui-textarea = { version = "0.2.0", default-features = false, git="https://github.com/rhysd/tui-textarea.git", features = ["ratatui-crossterm"] }
crossterm = { version = "0.26", features = [ "serde" ] }
sqlx = { version = "0.6", features = ["all-types", "mysql", "postgres", "runtime-tokio-native-tls" ] } 
anyhow = "1"
chrono = { version = "0.4", features = [ "serde" ] }
uuid = { version = "0.8", features = ["serde", "v4"] }
strum = { version = "0.24", features = ["derive"] }
dirs-next = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
itertools = { version = "0.10.5" }
regex = "1.7"
time = "0.3"
dioxus = "0.3.2"
